# rac

./: .gitignore  CLAUDE.md  CODEOWNERS  README.md  pyproject.toml
apps/control-plane/backend/: .env.example  CLAUDE.md  alembic.ini  conftest.py  pyproject.toml
apps/control-plane/backend/migrations/: env.py
apps/control-plane/backend/migrations/versions/: 0001_initial_schema.py  0002_seed_web_ui_agent.py  0003_webhook_subscription_columns.py  0004_detection_finding_decisions.py  0005_add_suggested_action_to_detection_finding.py  0006_app_model_phase5.py  0007_app_ownership_flag.py  0008_cost_snapshot_align.py  0009_rac_shim_db_role.py  0010_reviewer_token_phase7.py  0011_access_log_phase7.py  0012_asset_columns_phase8.py
apps/control-plane/backend/src/rac_control_plane/: __init__.py  correlation.py  errors.py  logging_setup.py  main.py  metrics.py  settings.py
apps/control-plane/backend/src/rac_control_plane/api/middleware/: __init__.py  idempotency.py
apps/control-plane/backend/src/rac_control_plane/api/routes/: access_log.py  access_mode.py  agents.py  approvals.py  assets.py  cost.py  findings.py  jobs.py  ownership.py  provisioning.py  submissions.py  tokens.py  (+2 more)
apps/control-plane/backend/src/rac_control_plane/auth/: __init__.py  client_credentials.py  dependencies.py  entra.py  principal.py
apps/control-plane/backend/src/rac_control_plane/cli/: __init__.py  cost_ingest.py  graph_sweep.py
apps/control-plane/backend/src/rac_control_plane/data/: __init__.py  agent_repo.py  app_repo.py  db.py  detection_finding_store.py  models.py  submission_repo.py
apps/control-plane/backend/src/rac_control_plane/detection/: contracts.py  discovery.py  engine.py  evaluate.py  repo_context.py
apps/control-plane/backend/src/rac_control_plane/manifest/: __init__.py  form_mapper.py  parser.py  schema.py
apps/control-plane/backend/src/rac_control_plane/provisioning/: __init__.py  aca.py  credentials.py  dns.py  files.py  keys.py  tag_builder.py
apps/control-plane/backend/src/rac_control_plane/services/: __init__.py  github_validation.py  idempotency.py
apps/control-plane/backend/src/rac_control_plane/static/: index.html
apps/control-plane/backend/tests/: __init__.py  conftest.py  conftest_settings_helper.py  test_access_log_api.py  test_access_mode_toggle.py  test_agents_api.py  test_app_health.py  test_app_repo.py  test_approvals_api.py  test_approvals_fsm.py  test_approvals_role_check.py  test_auth_client_credentials.py  test_auth_interactive.py  test_blob_to_files_copy.py  test_claim_builder.py  test_cost_aggregation.py  test_cost_api.py  test_cost_ingest.py  test_create_submission.py  test_deactivation_logic.py  test_detection_contracts.py  test_detection_engine.py  test_errors.py  test_external_fetch.py  test_findings_api.py  test_form_mapper.py  test_graph_sweep.py  test_idempotency.py  test_jws_assembly.py  test_key_probe.py  test_manifest_parser.py  test_metrics.py  test_ownership_flags_api.py  test_ownership_transfer.py  test_pi_validation.py  test_pipeline_dispatch.py  test_provisioning_aca.py  test_provisioning_aca_mounts.py  test_provisioning_credentials.py  test_provisioning_dns.py  (+25 more)
apps/control-plane/backend/tests/detection/: test_huge_files.py  test_inline_downloads.py  test_missing_sha.py  test_missing_user.py  test_root_user.py  test_secrets_in_repo.py  test_undeclared_assets.py  test_unreachable_external.py
apps/control-plane/backend/tests/fixtures/: __init__.py  client.py  db.py  oidc.py
apps/control-plane/backend/tests/fixtures/postgres/: Dockerfile  init.sql
apps/shim/: CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.dev.yml  pyproject.toml
apps/shim/dev/: init.sql
apps/shim/src/rac_shim/: app_registry.py  logging_setup.py  main.py  metrics.py  settings.py
apps/shim/src/rac_shim/audit/: __init__.py  access_record.py  batch_writer.py
apps/shim/src/rac_shim/cold_start/: decision.py
apps/shim/src/rac_shim/proxy/: forward.py  wake_up.py
apps/shim/src/rac_shim/routing/: decision.py
apps/shim/src/rac_shim/token/: audience.py  claims.py  cookie.py  denylist_cache.py  denylist_check.py  errors.py  kv_key_cache.py  validation.py
apps/shim/src/rac_shim/ui/: __init__.py  render.py
apps/shim/src/rac_shim/ui/templates/: base.html  error_expired.html  error_generic.html  error_revoked.html  interstitial.html
apps/shim/tests/: test_access_record.py  test_app_registry.py  test_audience.py  test_batch_writer.py  test_cold_start_decision.py  test_cookie.py  test_denylist_cache.py  test_denylist_check.py  test_kv_key_cache.py  test_main_flow.py  test_proxy_forward.py  test_routing_decision.py  test_settings.py  test_shim_metrics.py  test_token_validation.py  test_ui_render.py  test_wake_up.py
apps/shim/tests/fixtures/: db.py
(+233 files in other folders)
